crates/rustynes-test-harness/tests/snapshots/external_coverage__pc10_PC10_Yo_Noid.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=pc10/PC10 Yo! Noid.nes
rom_sha256=1e9f969a9943fe6f4abf096ce8eb2c9b47787f8c0eaf9a00c6d4f64e205366f0
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=b4c355a82d6f88c2
checkpoint f900 fb_fnv1a64=0a94aae157fc273f
checkpoint f1100 fb_fnv1a64=5f381e6394fcf8a9
