crates/rustynes-test-harness/tests/snapshots/external_coverage__vs_system_GVS_Stroke_Match_Golf.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=vs-system/GVS Stroke & Match Golf.nes
rom_sha256=5065c69c1e8b09818f374dd5a3b343a8de28363af5916091536633955202014c
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=e2de3a36ca39e2b4
checkpoint f900 fb_fnv1a64=5ad1e5ee0e0c80a1
checkpoint f1100 fb_fnv1a64=ddf345daf17f8b75
