crates/rustynes-test-harness/tests/snapshots/external_coverage__vs_system_GVS_Tennis.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=vs-system/GVS Tennis.nes
rom_sha256=52934e98167df47de52abc2c1f5653b53293ba667b91d2df2d582741f50a459c
frames=1141
fb_bytes=245760
cycles=33949961
audio_samples=836509
audio_fnv1a64=23861731035dd8c5
checkpoint f900 fb_fnv1a64=685b12114a576325
checkpoint f1100 fb_fnv1a64=685b12114a576325
